# rag-complaint-chatbot

./: .gitignore  LICENSE  README.md  app.py  dvc.yaml  pyproject.toml  requirements.txt  structure.md
.github/workflows/: ci.yml  unittests.yml
config/: paths.yaml  schema.yaml
data/interim/: .gitignore
data/processed/: .gitignore
notebooks/: eda.ipynb  embedding.ipynb  rag_pipeline.ipynb
scripts/: run_preprocessing.py  run_rag.py
src/rag_chatbot/chunking/: sample.py  text_splitter.py
src/rag_chatbot/core/: project_root.py  settings.py
src/rag_chatbot/data/: cleaning.py  filter.py  handler.py  validation.py
src/rag_chatbot/embeddings/: embedder.py
src/rag_chatbot/preprocessing/: cleaning.py
src/rag_chatbot/prompt/: prompts.py
src/rag_chatbot/rag/: confidence.py  evaluation.py  hallucination_guard.py  llm.py  pipeline.py  query_embedder.py  retriever.py
src/rag_chatbot/ui/: app.py
src/rag_chatbot/viz/: plots.py
tests/unit/: test_chunking.py  test_vector_store.py
